# ts-shop-demo-site

./: .gitignore  README.md  docker-compose.yml  eslint.config.mjs  index.html  jest.config.cjs  jest.config.js  jest.polyfills.js  package-lock.json  package.json  vite.config.ts
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py  test_main.py
frontend/: package-lock.json  tsconfig.json
frontend/public/: cd-mini.json  cd.json  lp.json  mp3.json
frontend/src/: App.css  App.tsx  api.ts  constants.ts  main.tsx  store.tsx  types.ts  utils.ts
frontend/src/__test__/: 02a.test.ts  02b.test.ts  03.test.ts  04.test.ts  05.test.ts  06.test.ts  07.test.ts  common.tsx
frontend/src/actions/: cartAction.ts  shopAction.ts
frontend/src/components/: Cart.tsx  Header.tsx  Order.tsx  ProductItem.tsx  Shop.tsx  Signin.tsx  StyledTable.tsx  Viewed.tsx
frontend/src/hooks/: useErrorSnackbar.ts
frontend/src/reducers/: cartReducer.ts  shopReducer.ts
public/: cd-mini.json  cd.json  lp.json  mp3.json
src/: App.css  App.tsx  constants.ts  data.ts  index.tsx  main.tsx  store.tsx  types.ts  utils.ts
src/__test__/: 00.test.ts  01.test.ts  02a.test.ts  02b.test.ts  03.test.ts  04.test.ts  common.tsx
src/actions/: cartAction.ts  shopAction.ts
src/components/: Cart.tsx  Header.tsx  History.tsx  Order.tsx  ProductDialog.tsx  Shop.tsx  Signin.tsx  Viewed.tsx
src/hooks/: useCartCalculations.ts  useFormValidation.ts
src/reducers/: cartReducer.ts  shopReducer.ts
