[project]
name = "ts-shop-demo-backend"
version = "1.0.0"
description = "FastAPI backend for TS Shop Demo Site"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "python-jose[cryptography]",
    "bcrypt",
    "python-multipart",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false
